--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -28,7 +28,7 @@
             SCHEDULE SHARING
           </div>
         </a>
-        <a href="/account">
+        <a href="/account/">
           <div class="header-link bg-white">
             ACCOUNT
           </div>
@@ -196,16 +196,16 @@
                 <h2 class="text-center letter-01">CHANGES PASSWORD</h2>
                 <p class="font-18">現在のパスワードと新しいパスワードを入力してください。</p>
                 <div class="input-area text-wood flex-col">
-                  <label for="name">PASSWORD</label>
-                  <input type="text" name="issue-number" maxlength="16" />
+                  <label for="password">PASSWORD</label>
+                  <input type="password" name="password" maxlength="20" />
                 </div>
                 <div class="input-area text-wood flex-col">
-                  <label for="name">NEW PASSWORD</label>
-                  <input type="text" name="issue-number" maxlength="16" />
+                  <label for="password">NEW PASSWORD</label>
+                  <input type="password" name="new-password" maxlength="20" />
                 </div>
                 <div class="input-area text-wood flex-col">
-                  <label for="name">NEW PASSWORD CONFIRMATION</label>
-                  <input type="text" name="issue-number" maxlength="16" />
+                  <label for="password">NEW PASSWORD CONFIRMATION</label>
+                  <input type="password" name="new-password-confirmation" maxlength="20" />
                 </div>
               </div>
               <div class="justify-end button-row flex">
@@ -270,7 +270,7 @@
                   <div class="info-box">
                     <div class="detail-box-password flex-col">
                       <p>パスワードをお忘れの方はこちら</p>
-                      <a href="/account/reset">
+                      <a href="/account/password_reset">
                         <div class="title-area-button bg-snow text-center">
                           PASSWORD RESET
                         </div>
