--- a/src/internal/web/template/login.html
+++ b/src/internal/web/template/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Are you free? -Login-</title>
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/registration.css" />
 </head>
@@ -13,24 +13,24 @@
   <main>
     <div class="registration-wrapper flex-col">
       <div class="registration-top-area bg-snow flex">
-        <h2 class="title">LOGIN</h2>
+        <h2 class="title login-title">LOGIN</h2>
         <div class="registration-link-wrapper">
           <a href="/signup" class="registration-link">アカウントの登録はこちら</a>
         </div>
       </div>
-      <div class="image-area flex-col">
+      <div class="login-image-area flex-col">
 
         <form class="login-form-area m-auto">
           <div class="input-area text-snow flex-col">
             <label for="name">USERNAME</label>
-            <input type="text" name="username" placeholder="10文字以内で入力してください" maxlength="10" />
+            <input type="text" name="username" placeholder="Your username." maxlength="10" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="password">PASSWORD</label>
-            <input type="text" name="password" placeholder="10文字以内で入力してください" maxlength="10" />
+            <input type="text" name="password" placeholder="Your password." maxlength="10" />
           </div>
           <div class="login-button-area">
-            <button class="form-button button-darkgreen">REGISTER</button>
+            <button class="form-button button-darkgreen">LOGIN</button>
           </div>
         </form>
       </div>
