--- a/src/internal/web/template/password-re-registration.html
+++ b/src/internal/web/template/password-re-registration.html
@@ -1,16 +1,16 @@
-{{define "sharing-from-someone"}}
+{{define "password-re-registration"}}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sharing</title>
+    <title>Account Password Reset</title>
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/registration.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/sharing.css" />
+    <link rel="stylesheet" href="../css/registration.css" />
+    <link rel="stylesheet" href="../css/account.css" />
   </head>
   <body>
     <header class="header-wrapper bg-white">
@@ -42,24 +42,22 @@
     <main class="main flex-col">
       <div class="title-area-wrapper flex">
         <div class="title-area bg-white">
-          <h1 class="text-center">SHARING PAGE</h1>
+          <h1 class="text-center">RE REGISTRATION</h1>
         </div>
         <div class="sharing-button-wrapper mr flex">
-          <a href="/sharing/to"  class="letter-01">
-            <div class="title-area-button bg-oldlace text-center">
-              TO SOMEONE
-            </div>
+          <a href="/account/password_reset" class="title-area-button text-center bg-oldlace">
+            PASSWORD RESET
           </a>
-          <a href="/sharing/from"  class="letter-01">
-            <div class="title-area-button bg-oldlace text-center">
-              FROM SOMEONE
+          <a href="/account/password_re_registration" class="title-area-button text-center bg-oldlace">
+            <div class="letter-01 font-17">
+              RE REGISTRATION
             </div>
           </a>
         </div>
       </div>
 
       <div class="content-wrapper flex">
-        <div class="content-left-area border-none mt-66">
+        <div class="content-left-area border-none border-right mt-66">
           <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <input class="input-calendar" type="date" name="today" id="today-input"/>
@@ -69,34 +67,37 @@
           </form>
         </div>
 
-        <!-- 相手のスケジュールを共有するフォーム -->
-        <div class="sharing-content-right-wrapper">
-          <div class="share-form-wrapper">
-            <h3 class="text-dimgrey">共有したい相手が発行した番号を入力してください。</h3>
-            <p class="text-dimgrey">※有効期限（15分）以内に入力してください。</p>
-            <form class="flex-col">
-              <div class="input-area text-wood flex-col">
-                <label for="name">ISSUE NUMBER</label>
-                <input type="text" name="issue-number" maxlength="16" />
-              </div>
-              <div class="sharing-button-area">
-                <button class="form-button button-skyblue">REGISTER</button>
-              </div>
-            </form>
+        <!-- エラーメッセージ -->
 
-            <div class="sharing-message-box">
-              <p class="font-18">相手のスケジュールを共有しました。</p>
-            </div>
+        <div class="account-content-right-area flex-col bg-white">
+          <div class="mt-9">
+            <h2 class="text-center">PASSWORD RE REGISTRATION</h2>
           </div>
+          <p class="text-center text-dimgrey font-18">パスワードリセット後<strong>1日以内</strong>に、新しいパスワードを入力してください。</p>
+          <p class="error-message-in-password-reset font-20 text-darkred">エラーメッセージ</p>
+          <form>
+            <div class="password-re-registration-input-wrapper m-auto">
+              <div class="input-area text-snow flex-col">
+                <label for="password">PASSWORD</label>
+                <input type="text" name="password" placeholder="Max. characters 20." maxlength="20" />
+              </div>
+              <div class="input-area text-snow flex-col">
+                <label for="password-confirmation">PASSWORD CONFIRMATION</label>
+                <input type="password" name="password-confirmation" placeholder="For reconfirmation." maxlength="20" />
+              </div>
+              <div class="password-reset-button-area">
+                <button class="form-button button-saddlebrown">REGISTER</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
-
     </main>
 
 
   </body>
   <script type="text/javascript" src="../js/now.js"></script>
-  <script src="../js/calendar.js"></script>
+  <script src="../js/account-button.js"></script>
 
 </html>
 {{end}}
