--- a/src/internal/web/template/sharing-to-someone.html
+++ b/src/internal/web/template/sharing-to-someone.html
@@ -28,7 +28,7 @@
             SCHEDULE SHARING
           </div>
         </a>
-        <a href="/account">
+        <a href="/account/">
           <div class="header-link bg-white">
             ACCOUNT
           </div>
