--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signup</title>
+  <title>Are you free? -Signup-</title>
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/registration.css" />
 </head>
@@ -13,29 +13,29 @@
   <main>
     <div class="registration-wrapper flex-col">
       <div class="registration-top-area bg-snow flex">
-        <h2 class="title">SIGNUP</h2>
+        <h2 class="title signup-title">SIGNUP</h2>
         <div class="registration-link-wrapper">
           <a href="/login" class="registration-link">既にアカウントをお持ちの方はこちら</a>
         </div>
       </div>
-      <div class="image-area flex-col">
+      <div class="signup-image-area flex-col">
 
         <form class="signup-form-area m-auto">
           <div class="input-area text-snow flex-col">
             <label for="name">USERNAME</label>
-            <input type="text" name="username" placeholder="10文字以内で入力してください" maxlength="10" />
+            <input type="text" name="username" placeholder="Max. characters 10." maxlength="10" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="password">PASSWORD</label>
-            <input type="text" name="password" placeholder="10文字以内で入力してください" maxlength="10" />
+            <input type="text" name="password" placeholder="Max. characters 20." maxlength="20" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="password-confirmation">PASSWORD CONFIRMATION</label>
-            <input type="password" name="password-confirmation" placeholder="再確認のためもう一度入力してください" maxlength="10" />
+            <input type="password" name="password-confirmation" placeholder="For reconfirmation." maxlength="20" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="e-mail">E-MAIL</label>
-            <input type="text" name="e-mail" placeholder="e-mailアドレスを入力してください" />
+            <input type="text" name="e-mail" placeholder="Your email-address." />
           </div>
           <div class="signup-button-area">
             <button class="form-button button-saddlebrown">REGISTER</button>
