--- a/src/internal/web/template/schedule.html
+++ b/src/internal/web/template/schedule.html
@@ -26,7 +26,7 @@
             SCHEDULE SHARING
           </div>
         </a>
-        <a href="/account">
+        <a href="/account/">
           <div class="header-link bg-white">
             ACCOUNT
           </div>
