--- a/src/internal/web/template/update-schedule.html
+++ b/src/internal/web/template/update-schedule.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Schedule</title>
+    <title>Are you free? -Update Schedule-</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
@@ -27,7 +27,7 @@
             SCHEDULE SHARING
           </div>
         </a>
-        <a href="/account">
+        <a href="/account/">
           <div class="header-link bg-white">
             ACCOUNT
           </div>
