--- a/src/internal/web/template/update-free-time.html
+++ b/src/internal/web/template/update-free-time.html
@@ -1,11 +1,11 @@
-{{define "update-schedule"}}
+{{define "update-free-time"}}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you free? -Update Schedule-</title>
+    <title>Are you free? _UPDATE free-time</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
