[Fix] 共有ページを修正

--- a/src/internal/web/template/share-with-me.html
+++ b/src/internal/web/template/share-with-me.html
@@ -71,8 +71,12 @@
 
         <!-- 相手のスケジュールを共有するフォーム -->
         <div class="sharing-content-right-wrapper">
+          <!-- error message -->
+          <p class="error-message-in-share font-20 text-darkred">エラーメッセージ or 成功メッセージ</p>
+
           <div class="share-form-wrapper">
-            <h3 class="text-dimgrey">共有したい相手が発行した番号を入力してください。</h3>
+            <h2 class="text-center">SHARE WITH SOMEONE</h2>
+            <p class="text-dimgrey">相手の発行番号を入力してください。</p>
             <p class="text-dimgrey">※有効期限（15分）以内に入力してください。</p>
             <form class="flex-col">
               <div class="input-area text-wood flex-col">
@@ -83,10 +87,6 @@
                 <button class="form-button button-skyblue">REGISTER</button>
               </div>
             </form>
-
-            <div class="sharing-message-box">
-              <p class="font-18">相手のスケジュールを共有しました。</p>
-            </div>
           </div>
         </div>
       </div>
