--- a/src/internal/web/static/css/sharing.css
+++ b/src/internal/web/static/css/sharing.css
@@ -1,8 +1,14 @@
 .sharing-content-right-wrapper {
   width: 80%;
-  margin-top: 64px;
+  margin-top: 80px;
   border: none;
   border-left: 1px solid #000;
+}
+
+.error-message-in-share {
+  position: absolute;
+  top: 24%;
+  left: 50%;
 }
 
 .sharing-title-area-button {
@@ -22,6 +28,9 @@
   width: 50%;
   height: 100%;
   margin: 0 auto;
+}
+.share-form-wrapper h2 {
+  margin-right: 40px;
 }
 .share-form-wrapper .input-area input {
   width: 100%;
@@ -44,7 +53,7 @@
   transition: box-shadow .5s ease;
 }
 .sharing-button-area {
-  width: 95%;
+  width: 92.5%;
   margin-top: 50px;
 }
 .button-skyblue {
@@ -52,31 +61,43 @@
   background-color: var(--SKYBLUE);
   opacity: 0.9;
 }
-.sharing-message-box {
-  margin-top: 50px;
-}
 
-.sharing-message {
-  line-height: 200%
-
+.issue-number-wrapper {
+  width: 100%;
+  height: 30%;
+  margin-top: 80px;
 }
-.sharing-number {
+.sharing-number-box {
+  position: relative;
+  width: 87.5%;
   height: 60px;
-  line-height: 100%;
-  padding-left: 30px;
-  letter-spacing: 0.5em;
+  padding: 0 15px;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 7px 7px 20px rgba(0,0,0,.3);
+  opacity: 0.9;
 }
-.sharing-number::after {
+.sharing-number-box::before {
   content: '';
   position: absolute;
+  left: 58%;
+  bottom: 15%;/*線の上下位置*/
   display: inline-block;
-  top: 85%;
-  left: 65%;
-
-  width: 31%;
-  height: 2px;
+  width: 70%;/*線の長さ*/
+  height: 2px;/*線の太さ*/
   -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  background-color: var(--SKYBLUE);
-
+  transform: translateX(-50%);/*位置調整*/
+  background-color: var(--WOOD);/*線の色*/
+  border-radius: 2px;/*線の丸み*/
+}
+.sharing-number {
+  line-height: 15px;
+  letter-spacing: 0.2em;
+  border-radius: 3px;
+}
+.message-box-for-share {
+  width: 70vh;
+  height: 20%;
+  margin-top: 20px;
+  margin-left: 20px;
 }
