--- a/src/internal/web/template/password-reset.html
+++ b/src/internal/web/template/password-reset.html
@@ -60,7 +60,9 @@
         <div class="content-left-area border-none border-right mt-66">
           <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
-            <input class="input-calendar" type="date" name="today" id="today-input"/>
+            <label for="today">
+              <input class="input-calendar" type="date" name="today" id="today-input"/>
+            </label>
             <button class="content-left-button">SELECT</button>
             <button class="content-left-button">CREATE</button>
             <button class="content-left-button">UPDATE</button>
