--- a/src/internal/web/template/update-free-time.html
+++ b/src/internal/web/template/update-free-time.html
@@ -12,19 +12,26 @@
     <link rel="stylesheet" href="../css/calender.css" />
   </head>
   <body>
-    <header class="header-wrapper bg-white">
-      <div class="header m-auto flex items-center bg-snow">
+    <header class="header-wrapper">
+      <div class="header m-auto flex items-center bg-white">
         <a href="/index">
           <div class="header-link bg-white">
             TOP
           </div>
         </a>
-        <div class="header-link bg-white">
-          <a href="/schedules">SCHEDULES</a>
-        </div>
-        <a href="/sharing/to">
+        <a href="/free-times">
           <div class="header-link bg-white">
-            SCHEDULE SHARING
+            FREE-TIME LATEST
+          </div>
+        </a>
+        <a href="/free-times">
+          <div class="header-link bg-white">
+            FREE-TIMES
+          </div>
+        </a>
+        <a href="/share/with_someone">
+          <div class="header-link bg-white">
+            SHARE
           </div>
         </a>
         <a href="/account/">
