--- a/src/internal/web/static/css/header.css
+++ b/src/internal/web/static/css/header.css
@@ -14,21 +14,28 @@
   border-right-width: thin;
   border-bottom-width: medium;
   border-left-width: 20px;
+  box-shadow: 7px 2px 10px rgba(0,0,0,.6);
 }
 
 .today-date {
   margin: 0 40px 0 auto;
   padding: 4px 12px;
   border: none;
-  border-right: 1px solid var(--WOOD);
-  border-bottom: 1px solid var(--WOOD);
+  border-right: 1.5px solid var(--WOOD);
+  border-bottom: 1.5px solid var(--WOOD);
+  box-shadow: 3px 3px 5px rgba(54, 54, 54,.3);
 }
 
 .header-link {
   margin-left: 30px;
+  padding: 4px 12px;
   font-size: 24px;
-  padding: 4px 4px;
-  border: 1px solid var(--WOOD);
+  letter-spacing: 0.05em;
+  border: none;
+  border-right: 1.5px solid var(--WOOD);
+  border-bottom: 1.5px solid var(--WOOD);
+  background-color: var(--SNOW);
+  box-shadow: 3px 3px 5px rgba(54, 54, 54, 0.3);
 }
 
 /* アコーディオンメニュー */
