--- a/src/internal/web/template/password-re-registration.html
+++ b/src/internal/web/template/password-re-registration.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/calender.css" />
     <link rel="stylesheet" href="../css/registration.css" />
     <link rel="stylesheet" href="../css/account.css" />
   </head>
@@ -65,7 +66,7 @@
 
       <div class="content-wrapper flex">
         <div class="content-left-area border-none border-right mt-66">
-          <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
+          <p class="ml-30 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <label for="today">
               <input class="input-calendar" type="date" name="today" id="today-input"/>
