--- a/src/internal/web/template/share-with-someone.html
+++ b/src/internal/web/template/share-with-someone.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/registration.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/calender.css" />
     <link rel="stylesheet" href="../css/sharing.css" />
   </head>
   <body>
@@ -67,7 +68,7 @@
 
       <div class="content-wrapper flex">
         <div class="content-left-area border-none mt-66">
-          <p class="ml-30 font-14 text-wood">日付を選んで<br>free-timeを操作</p>
+          <p class="ml-30 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
             <label for="today">
               <input class="input-calendar" type="date" name="today" id="today-input"/>
