--- a/src/internal/web/template/password-reset.html
+++ b/src/internal/web/template/password-reset.html
@@ -68,7 +68,7 @@
         <div class="content-left-area border-none border-right mt-66">
           <p class="ml-30 font-16 text-wood">日付を選んで<br>free-timeを操作</p>
           <form class="form-wrapper flex-col items-center">
-            <label for="today">
+            <label for="today" class="calendar-label">
               <input class="input-calendar" type="date" name="today" id="today-input"/>
             </label>
             <button class="content-left-button">SELECT</button>
