[Fix] アカウントページのズレを修正

--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -88,9 +88,8 @@
 
         <!-- エラーメッセージ -->
         <p class="error-message-in-account font-20 text-darkred">エラーメッセージ</p>
+
         <div class="account-content-right-area bg-white">
-
-
           <div id="icon-list">
             <form class="icon-list-wrapper flex-col bg-white">
               <div class="icon-row flex">
@@ -280,8 +279,8 @@
                   <div class="info-box">
                     <div class="detail-box-password flex-col">
                       <p>パスワードをお忘れの方はこちら</p>
-                      <a href="/account/password_reset">
-                        <div class="title-area-button bg-snow text-center">
+                      <a href="/account/password_reset" class="password-reset-button">
+                        <div class="bg-snow text-center">
                           PASSWORD RESET
                         </div>
                       </a>
