[Fix] ヘッダーのリンク先を修正、[Add] スケジュール一覧ページの追加

--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -21,7 +21,7 @@
             TOP
           </div>
         </a>
-        <a href="/free-times">
+        <a href="/free-time">
           <div class="header-link bg-white">
             FREE-TIME LATEST
           </div>
