--- a/src/internal/web/template/free-times.html
+++ b/src/internal/web/template/free-times.html
@@ -1,11 +1,11 @@
-{{define "free-time"}}
+{{define "free-times"}}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you free? _free-time_</title>
+    <title>Are you free? _free-times_</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/main.css" />
@@ -85,28 +85,22 @@
         <div class="select-schedule-left-area border-none border-right flex-col">
           <div class="items-center">
             <div class="content-left flex justify-center items-center m-auto">
-              <p class="font-24">Masaru</p>
+              <p class="font-24">2023/02/01</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
-              <p>Kaoru12345</p>
+              <p>2023/02/02</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
-              <p>ほげほげほげほげほげ</p>
+              <p>2023/02/03</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
-              <p>Jiichan</p>
+              <p>2023/02/04</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
-              <p>Baachan</p>
+              <p>2023/02/05</p>
             </div>
             <div class="content-left flex justify-center items-center m-auto">
-              <p>MOGE</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Mogu</p>
-            </div>
-            <div class="content-left flex justify-center items-center m-auto">
-              <p>Risa</p>
+              <p>2023/02/06</p>
             </div>
           </div>
         </div>
