[Fix] ボタンの名前を変更

--- a/src/internal/web/template/share-with-me.html
+++ b/src/internal/web/template/share-with-me.html
@@ -53,12 +53,12 @@
           <h1 class="text-center">SHARING PAGE</h1>
         </div>
         <div class="sharing-button-wrapper mr flex">
-          <a href="/sharing/to"  class="letter-01">
+          <a href="/share/with_someone"  class="letter-01">
             <div class="sharing-title-area-button bg-oldlace text-center">
               SHARE WITH SOMEONE
             </div>
           </a>
-          <a href="/sharing/from"  class="letter-01">
+          <a href="/share/with_me"  class="letter-01">
             <div class="sharing-title-area-button bg-oldlace text-center">
               SHARE WITH ME
             </div>
@@ -85,7 +85,7 @@
           <p class="error-message-in-share font-20 text-darkred">エラーメッセージ or 成功メッセージ</p>
 
           <div class="share-form-wrapper">
-            <h2 class="text-center">SHARE WITH SOMEONE</h2>
+            <h2 class="text-center">SHARE WITH ME</h2>
             <p class="text-dimgrey">相手の発行番号を入力してください。</p>
             <p class="text-dimgrey">※有効期限（15分）以内に入力してください。</p>
             <form class="flex-col">
