--- a/src/internal/web/template/share-with-someone.html
+++ b/src/internal/web/template/share-with-someone.html
@@ -53,12 +53,12 @@
           <h1 class="text-center">SHARING PAGE</h1>
         </div>
         <div class="sharing-button-wrapper mr flex">
-          <a href="/sharing/to"  class="letter-01">
+          <a href="/share/with_someone"  class="letter-01">
             <div class="sharing-title-area-button bg-oldlace text-center">
               SHARE WITH SOMEONE
             </div>
           </a>
-          <a href="/sharing/from"  class="letter-01">
+          <a href="/share/with_me"  class="letter-01">
             <div class="sharing-title-area-button bg-oldlace text-center">
               SHARE WITH ME
             </div>
@@ -94,7 +94,7 @@
                 <input type="password" name="password" maxlength="10" />
               </div>
               <div class="sharing-button-area">
-                <button class="form-button button-skyblue">ISSUE</button>
+                <button class="form-button button-skyblue">ISSUE NUMBER</button>
               </div>
             </form>
             <div class="issue-number-wrapper">
