--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -57,17 +57,17 @@
 
           <button id="icon-list-display-button" class="title-area-button text-center bg-oldlace">
             <div class="letter-01 font-17">
-              CHANGES ICON
+              EDIT ICON
             </div>
           </button>
           <button id="username-change-form-display-button" class="title-area-button text-center bg-oldlace">
             <div class="letter-01 font-17">
-              CHANGES USERNAME
+              EDIT USERNAME
             </div>
           </button>
           <button id="password-change-form-display-button" class="title-area-button text-center bg-oldlace">
             <div class="letter-01 font-17">
-              CHANGES PASSWORD
+              EDIT PASSWORD
             </div>
           </button>
         </div>
@@ -166,7 +166,7 @@
               <div class="justify-end button-row flex">
                 <button id="submit-button" type="submit" class="bg-wood">
                   <div class="text-snow letter-01 font-17">
-                    SUBMIT CHANGES
+                    SAVE EDITS
                   </div>
                 </button>
               </div>
@@ -177,7 +177,7 @@
           <div id="username-change-form">
             <form class="icon-list-wrapper flex-col bg-white">
               <div class="username-input-wrapper m-auto flex-col">
-                <h2 class="text-center letter-01">CHANGES USERNAME</h2>
+                <h2 class="text-center letter-01">EDIT USERNAME</h2>
                 <p class="font-18">新しいユーザー名を入力してください。</p>
                 <div class="input-area text-wood flex-col">
                   <label for="name">NEW USERNAME</label>
@@ -191,7 +191,7 @@
               <div class="justify-end button-row flex">
                 <button id="submit-button" type="submit" class="bg-wood">
                   <div class="text-snow letter-01 font-17">
-                    SUBMIT CHANGES
+                    SAVE EDITS
                   </div>
                 </button>
               </div>
@@ -202,7 +202,7 @@
           <div id="password-change-form">
             <form class="icon-list-wrapper flex-col bg-white">
               <div class="username-input-wrapper m-auto flex-col">
-                <h2 class="text-center letter-01">CHANGES PASSWORD</h2>
+                <h2 class="text-center letter-01">EDIT PASSWORD</h2>
                 <p class="font-18">現在のパスワードと新しいパスワードを入力してください。</p>
                 <div class="input-area text-wood flex-col">
                   <label for="password">PASSWORD</label>
@@ -220,7 +220,7 @@
               <div class="justify-end button-row flex">
                 <button id="submit-button" type="submit" class="bg-wood">
                   <div class="text-snow letter-01 font-17">
-                    SUBMIT CHANGES
+                    SAVE EDITS
                   </div>
                 </button>
               </div>
@@ -275,13 +275,13 @@
                   </div>
                 </div>
                 <div class="my-info">
-                  <label for="number">PASSWORD RESET</label>
+                  <label for="number">RESET PASSWORD</label>
                   <div class="info-box">
                     <div class="detail-box-password flex-col">
                       <p>パスワードをお忘れの方はこちら</p>
                       <a href="/account/password_reset" class="password-reset-button">
                         <div class="bg-snow text-center">
-                          PASSWORD RESET
+                          RESET PASSWORD
                         </div>
                       </a>
                     </div>
