--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -22,7 +22,7 @@
 
         <form class="signup-form-area m-auto">
           <div class="input-area text-snow flex-col">
-            <label for="name">USERNAME</label>
+            <label for="username">USERNAME</label>
             <input type="text" name="username" placeholder="Max. characters 10." maxlength="10" />
           </div>
           <div class="input-area text-snow flex-col">
