--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -23,11 +23,11 @@
         <form class="signup-form-area m-auto">
           <div class="input-area text-snow flex-col">
             <label for="username">USERNAME</label>
-            <input type="text" name="username" placeholder="Max. characters 10." maxlength="10" />
+            <input type="text" name="username" placeholder="Limit. characters 10." maxlength="10" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="password">PASSWORD</label>
-            <input type="text" name="password" placeholder="Max. characters 20." maxlength="20" />
+            <input type="text" name="password" placeholder="Limit. characters 20." maxlength="20" />
           </div>
           <div class="input-area text-snow flex-col">
             <label for="password-confirmation">PASSWORD CONFIRMATION</label>
