--- a/src/internal/web/static/css/registration.css
+++ b/src/internal/web/static/css/registration.css
@@ -3,6 +3,28 @@
   min-height: 100vh;
 }
 
+/* .error-message-in-signup {
+  position: absolute;
+  bottom: 4%;
+  right: 0%;
+} */
+.error-message-in-signup {
+  position: absolute;
+  top: 19%;
+  left: 35.0%;
+  /* bottom: 4%;
+  right: 0%; */
+  width: 27%;
+  height: 5%;
+  line-height: 5%;
+  padding: 0 10px;
+  border-radius: 8px;
+  background-color: var(--SNOW);
+  opacity: 0.7;
+  box-shadow: 5px 5px 20px rgba(0,0,0,.6);
+  z-index: 10;
+}
+
 .registration-top-area {
   width: 100%;
   height: 15vh;
