--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -53,8 +53,6 @@
           <h1 class="text-center">ACCOUNT PAGE</h1>
         </div>
         <div class="sharing-button-wrapper mr flex">
-
-
           <button id="icon-list-display-button" class="title-area-button text-center bg-oldlace">
             <div class="letter-01 font-17">
               EDIT ICON
@@ -70,6 +68,16 @@
               EDIT PASSWORD
             </div>
           </button>
+          <form
+            action="/logout"
+            method="POST"
+          >
+            <button id="password-change-form-display-button" class="logout-button text-center button-darkgreen">
+              <div class="letter-01 font-20">
+                LOGOUT
+              </div>
+            </button>
+          </form>
         </div>
       </div>
 
