[Fix] アカウント情報の箇所を修正

--- a/src/internal/web/static/css/base.css
+++ b/src/internal/web/static/css/base.css
@@ -212,3 +212,17 @@ ul {
 .border-left {
   border-left: 1px solid #000;
 }
+
+/* =================== error message ====================== */
+
+.error-message-in-account {
+  position: absolute;
+  top: 24%;
+  left: 50%;
+}
+
+.error-message-in-password-reset {
+  position: absolute;
+  top: 47%;
+  left: 50%;
+}
