--- a/src/internal/web/template/account.html
+++ b/src/internal/web/template/account.html
@@ -68,16 +68,6 @@
               EDIT PASSWORD
             </div>
           </button>
-          <form
-            action="/logout"
-            method="POST"
-          >
-            <button id="password-change-form-display-button" class="logout-button text-center button-darkgreen">
-              <div class="letter-01 font-20">
-                LOGOUT
-              </div>
-            </button>
-          </form>
         </div>
       </div>
 
@@ -97,7 +87,7 @@
         <!-- エラーメッセージ -->
         <p class="error-message-in-account font-20 text-darkred">エラーメッセージ</p>
 
-        <div class="account-content-right-area bg-white">
+        <div class="account-content-right-area flex bg-white">
           <div id="icon-list">
             <form class="icon-list-wrapper flex-col bg-white">
               <div class="icon-row flex">
@@ -235,67 +225,174 @@
             </form>
           </div>
 
-          <div class="account-wrapper m-auto flex">
-            <div class="account-content-left flex-col">
-              <div class="my-icon">
+          <div class="account-info-left-area flex-col">
+            <div class="my-icon-wrapper flex-col">
+              <label for="icon">YOUR ICON</label>
+              <div class="my-icon-area">
                 <img src="../icon/icon20.svg" alt="">
               </div>
-              <div class="my-name">
-                <label for="name">USERNAME</label>
-                <div class="name-box">
-                  <p class="font-24">あいうえおかきくけこ</p>
-                </div>
+            </div>
+            <div class="my-name-wrapper flex-col">
+              <label for="name">USERNAME</label>
+              <div class="name-box box-ghostwhite">
+                <p class="text-center font-24">あいうえおかきくけこ</p>
               </div>
             </div>
-            <div class="account-content-right">
-              <div class="my-info-wrapper">
-                <div class="my-info">
+          </div>
+
+          <div class="account-info-right-area">
+            <div class="info-wrapper flex-col">
+              <div class="info-area flex">
+                <div class="info-description-wrapper flex-col">
+                  <div class="description-label-wrapper">
+                    <label for="number">SHARERS</label>
+                  </div>
+                  <div class="description-wrapper">
+                    <p class="font-18 text-dimgrey">共有している人数</p>
+                  </div>
+                </div>
+                <div class="info-result-wrapper">
+                  <div class="result-wrapper box-ghostwhite">
+                    <p class="text-center font-22">02 人</p>
+                  </div>
+                </div>
+                <div class="info-change-button-wrapper">
+                  <a href="/account/">
+                    <div class="button-wrapper button-saddlebrown">
+                      <p class="text-center letter-005  font-20">SHARE OFF</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="info-area flex">
+                <div class="info-description-wrapper flex-col">
+                  <div class="description-label-wrapper">
+                    <label for="number">SHARERS</label>
+                  </div>
+                  <div class="description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">共有されている人数</p>
+                  </div>
+                </div>
+                <div class="info-result-wrapper">
+                  <div class="result-wrapper box-ghostwhite">
+                    <p class="text-center font-22">102 人</p>
+                  </div>
+                </div>
+                <div class="info-change-button-wrapper">
+                  <a href="/account/">
+                    <div class="button-wrapper button-saddlebrown">
+                      <p class="text-center font-20">SHARE OFF</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="info-area flex">
+                <div class="button-info-description-wrapper flex-col">
+                  <div class="button-description-label-wrapper">
+                    <label for="number">PASSWORD RESET</label>
+                  </div>
+                  <div class="button-description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">パスワードリセットはこちら</p>
+                  </div>
+                </div>
+                <div class="info-change-button-wrapper">
+                  <a href="/account/">
+                    <div class="button-wrapper button-saddlebrown">
+                      <p class="text-center font-20">RESET</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="info-area flex">
+                <div class="button-info-description-wrapper flex-col">
+                  <div class="button-description-label-wrapper">
+                    <label for="number">LOGOUT</label>
+                  </div>
+                  <div class="button-description-wrapper">
+                    <p class="font-18 letter-005 text-dimgrey">ログアウトはこちら</p>
+                  </div>
+                </div>
+                <div class="info-change-button-wrapper">
+                  <a href="/logout">
+                    <div class="button-wrapper button-darkgreen">
+                      <p class="text-center font-20">LOGOUT</p>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <!-- <div class="info-area flex">
+                <div class="info-description-wrapper flex-col">
                   <label for="number">SHARERS</label>
-                  <div class="info-box flex">
-                    <div class="detail-box">
-                      <p>共有している人数</p>
-                    </div>
-                    <div class="result-box">
-                      <p>02 人</p>
-                    </div>
-                  </div>
+                  <p class="">共有している人数</p>
                 </div>
-                <div class="my-info">
+                <div class="info-result-wrapper">
+
+                </div>
+                <div class="info-change-button-wrapper">
+
+                </div>
+              </div>
+              <div class="info-area flex">
+                <div class="info-description-wrapper flex-col">
                   <label for="number">SHARERS</label>
-                  <div class="info-box flex">
-                    <div class="detail-box">
-                      <p>共有されている人数</p>
-                    </div>
-                    <div class="result-box">
-                      <p>02 人</p>
-                    </div>
-                  </div>
+                  <p class="">共有している人数</p>
                 </div>
-                <div class="my-info">
-                  <label for="number">REGISTRATIONS</label>
-                  <div class="info-box flex">
-                    <div class="detail-box">
-                      <p>free-time登録件数</p>
-                    </div>
-                    <div class="result-box">
-                      <p>02 件</p>
-                    </div>
-                  </div>
+                <div class="info-result-wrapper">
+
                 </div>
-                <div class="my-info">
-                  <label for="number">RESET PASSWORD</label>
-                  <div class="info-box">
-                    <div class="detail-box-password flex-col">
-                      <p>パスワードをお忘れの方はこちら</p>
-                      <a href="/account/password_reset" class="password-reset-button">
-                        <div class="bg-snow text-center">
-                          RESET PASSWORD
-                        </div>
-                      </a>
-                    </div>
+                <div class="info-change-button-wrapper">
+
+                </div>
+              </div> -->
+
+
+
+              <!-- <div class="info-box flex">
+                <div class="detail-box">
+
+                </div>
+                <div class="result-box">
+                  <p>02 人</p>
+                </div>
+              </div>
+              <div class="my-info">
+                <label for="number">SHARERS</label>
+                <div class="info-box flex">
+                  <div class="detail-box">
+                    <p>共有されている人数</p>
+                  </div>
+                  <div class="result-box">
+                    <p>02 人</p>
                   </div>
                 </div>
               </div>
+
+              <div class="my-info">
+                <label for="logout">LOGOUT</label>
+                <div class="info-box">
+                  <div class="detail-box-password flex-col">
+                    <p>ログアウトはこちら</p>
+                    <form action="" class="logout-button-wrapper">
+                      <button class="logout-button text-center button-darkgreen">
+                        LOGOUT
+                      </button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="my-info">
+                <label for="logout">LOGOUT</label>
+                <div class="info-box">
+                  <div class="detail-box-password flex-col">
+                    <p>ログアウトはこちら</p>
+                    <form action="" class="logout-button-wrapper">
+                      <button class="logout-button text-center button-darkgreen">
+                        LOGOUT
+                      </button>
+                    </form>
+                  </div>
+                </div>
+              </div> -->
 
             </div>
           </div>
