--- a/src/internal/web/template/signup.html
+++ b/src/internal/web/template/signup.html
@@ -45,7 +45,7 @@
           </div>
           <div class="input-area text-snow flex-col">
             <label for="e-mail">E-MAIL</label>
-            <input type="text" name="e-mail" placeholder="Your email-address." />
+            <input type="text" name="e-mail" placeholder="Format. (example@email.com)." />
           </div>
           <div class="signup-button-area">
             <button class="form-button button-saddlebrown">REGISTER</button>
